fixtures/frontend/milestone-2/invalid/fanout-non-list-subject/main.aivi
type User = { email: Text }

val user:User = { email: "ada@example.com" }

val emails =
    user
     *|> .email
